--- a/src/components/sidebar/Sidebar.css
+++ b/src/components/sidebar/Sidebar.css
@@ -48,3 +48,7 @@
   width: 50%;
   margin-bottom: 1.5625rem;
 }
+.side-link.active img {
+  padding-bottom: 2px;
+  border-bottom: 3px solid red;
+}
