--- a/src/components/sidebar/Sidebar.css
+++ b/src/components/sidebar/Sidebar.css
@@ -52,3 +52,21 @@
   padding-bottom: 2px;
   border-bottom: 3px solid red;
 }
+
+@media (max-width: 900px) {
+  .sidebar {
+    width: 2.875rem;
+    padding-left: 0.625rem;
+  }
+  .shortcut-links img {
+    margin-right: 0.625rem;
+  }
+  .sidebar p,
+  .sidebar h3 {
+    display: none;
+  }
+  .sidebar hr {
+    width: 50%;
+    margin-bottom: 1.5625rem;
+  }
+}
